src/pages/styles.module.css
/**
 * Copyright (c) 2017-present, Facebook, Inc.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

 .heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
  border-bottom-right-radius: 10% 20%;
  background-color: #F4F4F2 !important;
}

@media screen and (max-width: 966px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  position: float;
  bottom: 0;
}

.buttons-tools-github {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 1em 1em 0 !important;
}

.tools {
  align-items: center;
  padding: 2rem 0;
  width: 100%;
  display: flex;
  color: #000;
  text-align: center;
  justify-content: center;
  background-color: #f4f4f2;
}

.headerImage {
  height: 300px;
  width: 200px;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 1rem 0;
}

.featureImage {
  height: 150px;
  width: 100px;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 1rem 0;
}

.toolImage {
  height: 100px;
  width: 75px;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 1rem 0;
}


.heroProjectDescription{
  color: #000 !important;
}


.headerLogo {
  z-index: 5 !important;
  width: 10%;
}

.toolHead {
  position: "center";
  font-size: 24000px;
}

.showcaseBlog {
  height: 100%;
}

/* Hero */

.heroInner {
  margin: 0 auto;
  max-width: 1100px;
  padding: 0 20px;
}

.heroProjectTagline {
  color: #000;
  font-size: 4rem;
  margin: 0;
  margin-top: 1rem;
  text-align: left;
}

.heroProjectKeywords {
  color: #00cc66;
}

.heroLogo {
  animation-duration: 2s;
  animation-name: jackInTheBox;
  float: right;
  height: 15rem;
  margin-top: 1px;
  padding: 5px;
}

@media only screen and (max-width: 768px) {
  .hero {
    border-left: 20px;
    border-right: 20px;
  }

  .heroInner {
    padding: 0;
  }

  .heroProjectTagline {
    font-size: 36px;
    text-align: center;
  }

  .heroLogo {
    display: block;
    float: none;
    margin: 0 auto;
  }

  .indexCtas {
    text-align: center;
  }

  .indexCtasGitHubButton {
    display: none;
  }
}

/* Animation */
@keyframes jackInTheBox {
  from {
    opacity: 0;
    transform: scale(0.1) rotate(30deg);
    transform-origin: center bottom;
  }

  50% {
    transform: rotate(-10deg);
  }

  70% {
    transform: rotate(3deg);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

.indexCtas {
  margin-top: 1em;
}

.indexCtasGetStartedButton {
  border: 1px solid var(--ifm-color-secondary);
  display: inline-block;
  line-height: 1.2em;
  text-decoration: none !important;
  transition: background 0.3s, color 0.3s;
  border-width: 2px;
  font-size: 24px;
  font-weight: bold;
  padding-right: 3rem;
  padding: 18px 36px;
  z-index: 10;
  border-radius: 5;
  margin-bottom: 1rem;
  color: #fff !important;
}

.indexCtasGitHubButton {
  vertical-align: sub;
}


/**
 * Copyright (c) 2017-present, Facebook, Inc.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.github {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 1em 1em 0;
}

.doc {
  align-items: center;
  padding: 2rem 0;
  width: 100%;
  display: flex;
  border-bottom-left-radius: 100% 600px;
  border-bottom-right-radius: 100% 600px;
}

.features {
  color: var(--ifm-feature-color);
  align-items: center;
  padding: 2rem 0;
  width: 100%;
  display: flex;
  text-align: center;
  justify-content: center;
  border-bottom-left-radius: 100% 600px;
  border-bottom-right-radius: 100% 600px;
}

.hero__title {
  z-index: 1 !important;
  color: #000000 !important;
}

.hero__subtitle {
  z-index: 1 !important;
  color: #a4a9ad !important;
}



.text__gray {
  color: #000000 !important;
}

/* Animation */
@keyframes jackInTheBox {
  from {
    opacity: 0;
    transform: scale(0.1) rotate(30deg);
    transform-origin: center bottom;
  }

  50% {
    transform: rotate(-10deg);
  }

  70% {
    transform: rotate(3deg);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

.text {
  font-family: Poppins, sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  line-height: normal;
  color: var(--ifm-font-base-color);
}

.text-big {
  font-size: 1.5em;
  font-weight: bold;
}

.text-huge {
  font-size: 2.5em;
  font-weight: bold;
  line-height: 1.25;
}

.text.heading-helper {
  color: var(--uni-heading-helper-color);
  font-family: Muli;
  font-size: 1em;
  font-weight: 600;
  letter-spacing: 1px;
  opacity: 0.6;
}

.heading {
  color: var(--uni-heading-color);
  font-family: Poppins;
  font-size: 2em;
  font-weight: bold;
  line-height: 1.31;
  margin-bottom: 2em;
}

.heading-white {
  --uni-heading-color: var(--white);
}

.text.emphasis {
  color: var(--dodger-blue);
  font-family: Poppins;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.42;
}

.text.paragraph {
  color: var(--white);
  font-family: Muli;
  font-size: 1em;
  line-height: 1.75;
  margin-bottom: 0.8em;
  opacity: 0.8;
}

.text.section-subtitle {
  color: var(--white);
  font-family: Muli;
  font-size: 1em;
  font-weight: 600;
  letter-spacing: 1px;
  opacity: 0.6;
}

.text.footer-heading {
  color: var(--dodger-blue);
  font-family: Muli;
  font-size: 18px;
  font-weight: 600;
}

.supported {
  color: var(--white);
  font-family: Muli;
  font-size: 0.85em;
  font-weight: 600;
  line-height: 2;
  margin-top: 3em;
  opacity: 0.6;
}

.title {
  color: var(--white);
  display: block;
}

.description {
  color: var(--bright-cyan);
  display: block;
  margin: 24px 0;
}

.bullets {
  color: var(--periwinkle);
}

.bullets li {
  margin-bottom: 0;
}

.bullets li::before {
  background-color: var(--periwinkle) !important;
}

.landing :global .hero .container {
  margin-top: 0em;
  margin-bottom: 0em;
}

.landing :global .container {
  margin-top: 4em;
  margin-bottom: 4em;
}

.landing .section-content :global .row {
  position: relative;
}

@media (max-width: 996px) {
  .landing :global .col {
    margin-bottom: 2em;
  }
  .landing :global .col:last-of-type {
    margin-bottom: 0;
  }
}

@supports (background-clip: text) {
  .description {
    background-image: linear-gradient(
      0.25turn,
      var(--ifm-color-primary),
      #807d7c
    );
    background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}

/* Features */
.features {
  align-items: center;
  padding: 2rem 0;
  width: 100%;
  display: flex;
}

.card {
  max-width: 348px;
  margin: auto;
  background-color: var(--ifm-background-color);
  min-height: 350px;
  --ifm-global-shadow-lw: 0 0 0 0 !important;
}

.cardImage {
  height: 8rem;
  width: auto;
  padding: 1rem;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.cardBody {
  text-align: center;
}

